# pediatric-ai

./: .env.example  .gitignore  Dockerfile.ai-engine  Dockerfile.bff  Dockerfile.frontend  README.md  docker-compose.yml  nginx.conf  package.json  pnpm-lock.yaml  prometheus.yml
.github/workflows/: ci.yml
apps/: init_taro.exp
apps/bff/: .env.example  README.md  package.json
apps/frontend/: .env.example  README.md  package.json  project.config.json  tsconfig.json
services/ai-engine/: .env.example  README.md  config.py  init_knowledge.py  main.py  observability.py  pyproject.toml  requirements.txt  run_tests.py  test_broken_url.py  test_langfuse_smoke.py  test_observability.py  test_p1_guardrails.py  test_p2_agentic.py  test_pydantic.py  test_qwen_vl.py  test_qwen_vl_double.py  test_regression_acceptance.py
services/ai-engine/agent/: __init__.py  graph.py  rag_milvus.py  state.py
services/ai-engine/ai_engine.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/ai-engine/data/sources/: README.md  pediatric_authority_sources.json
services/ai-engine/scripts/: README.md  ingest.py  knowledge_cli.py  knowledge_fetch.py  knowledge_import.py
services/ai-engine/tests/: __init__.py  test_broken_url.py  test_chat_node.py  test_embed.py  test_history_only.py  test_hybrid_rag_accuracy.py  test_langfuse_smoke.py  test_mime.py  test_observability.py  test_p1_guardrails.py  test_p2_agentic.py  test_pdf_ingest.py  test_pews_evaluation.py  test_qwen_vl.py  test_qwen_vl_double.py  test_qwen_vl_system.py  test_regression_acceptance.py  test_stream.py
(+86 files in other folders)
