[project]
name = "ai-engine"
version = "0.1.0"
description = "AI 中枢层：Python + LangGraph 多智能体编排引擎"
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1.0",
    "langgraph>=0.0.25",
    "langgraph-checkpoint-postgres>=3.1.0",
    "langfuse>=4.13.2",
    "fastapi>=0.110.0",
    "psycopg[binary]>=3.3.4",
    "uvicorn>=0.27.0",
    "pydantic>=2.0.0"
]
